Updated file names

--- a/PartiaBet.Server/RestAPI.csproj
+++ b/PartiaBet.Server/RestAPI.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\partiabet.client\partiabet.client.esproj">
+    <ProjectReference Include="..\partiabet.client\Client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
