--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,4 +10,8 @@
     <Folder Include="DTOs\Responses\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
