--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "date-fns-tz": "^3.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
