--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.8.0",
