--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@microsoft/signalr": "^9.0.6",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/vite": "^4.1.10",
     "autoprefixer": "^10.4.21",
