--- a/Client/package.json
+++ b/Client/package.json
@@ -22,6 +22,7 @@
     "date-fns-tz": "^3.2.0",
     "formik": "^2.4.6",
     "fortawesome": "^0.0.1-security",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.8.0",
