--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,14 @@ services:
     networks:
       - app-network
 
+  redis:
+    image: redis:7.2-alpine
+    container_name: database_redis
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
