--- a/RestAPI/RestAPI.csproj
+++ b/RestAPI/RestAPI.csproj
@@ -39,4 +39,8 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\Games\Chess\" />
+  </ItemGroup>
+
 </Project>
