--- a/Client/package.json
+++ b/Client/package.json
@@ -26,6 +26,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.8.0",
+    "react-timer-hook": "^4.0.5",
     "tailwindcss": "^4.1.10",
     "yup": "^1.7.0"
   },
